@@ -50,7 +50,7 @@ $config = Zend_Registry::get('config');
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
-	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/bootstrap-filestyle.js"></script>
 
@@ -335,6 +335,7 @@ $config = Zend_Registry::get('config');
 	    });
 	</script>
 	<script src="js/toggle-content.js"></script>
+	<script src="js/permissionpanel.js"></script>
     <!-- <script src="http://tablesorter.com/__jquery.tablesorter.min.js"></script> -->
     </body>
 </html>
