@@ -1,3 +1,6 @@
+20130214 - fhabermann
+* added js functions to handle permissions
+
 20130208 - fhabermann
 * bootstrap upgrade to version 2.3.0
 
